flex/flex-tests/testData/flex_highlighting/FlexWithMockFlexWithLineMarkers.mxml
<?xml version="1.0" encoding="utf-8"?>

<mx:Application xmlns:mx="http://www.adobe.com/2006/mxml" mouseDown="<inject descr="null"><info descr="instance method">copy</info>()</inject>" mouseUp="<inject descr="null"><info descr="instance method">copy</info>()</inject>">

    <mx:Script><inject descr="null">public override function <lineMarker descr="Overrides method 'removeEventListener' in flash.events.EventDispatcher"><info descr="instance method">removeEventListener</info></lineMarker>(<info descr="parameter">type</info>:<info descr="class">String</info>, <info descr="parameter">listener</info>:<info descr="class">Function</info>, <info descr="parameter">useCapture</info>:<info descr="class">Boolean</info> = false):void {}

    function <info descr="instance method">copy</info>() {
        <info descr="instance field">destination</info>.<info descr="instance method">text</info>=<info descr="instance field">source</info>.<info descr="instance method">text</info> = ' '
        var <info descr="local variable">aaa</info>:<info>Function</info> = <info descr="instance method">copy_</info>
    }

    function <info descr="instance method">copy_</info>() {
    }
    </inject></mx:Script>
    <mx:Script><![CDATA[<inject descr="null">
    var <info descr="instance field">a</info> = <xxx>{<error descr="Unresolved variable or type zzz">zzz</error>}</xxx>;
    var <info descr="instance field">b</info> = <xxx>{<info descr="instance field">a</info>}</xxx>;
 </inject>]]></mx:Script>

    <mx:TextInput id="source" width="100" horizontalCenter="0" verticalCenter="1"/>
    <mx:TextInput id="destination" width="100" horizontalCenter="0" verticalCenter="1"/>
</mx:Application>
